--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -3,12 +3,12 @@
     "purchase_code": "",
     "presentation_enable": true,
     "logo_types": "svg",
-    "logo_svg_file": "svg-logo",
+    "logo_svg_file": "blancsom-logo",
     "logo_image": "",
-    "logo_width": 64,
-    "logo_mobile_svg_file": "svg-logo-mobile",
+    "logo_width": 160,
+    "logo_mobile_svg_file": "blancsom-logo",
     "logo_mobile_image": "",
-    "logo_mobile_width": 34,
+    "logo_mobile_width": 150,
     "logo_sticky_svg_file": "svg-logo-sticky",
     "logo_sticky_image": "",
     "logo_sticky_width": 34,
@@ -18,10 +18,10 @@
     "logo_footer_mobile_svg_file": "",
     "logo_footer_mobile_image": "",
     "logo_footer_mobile_width": 64,
-    "favicon": "shopify:\/\/shop_images\/favicon_377d9995-ccc1-47eb-a17b-22e33b463cab.png",
+    "favicon": "shopify:\/\/shop_images\/favicon.png",
     "layout_container": "fullwidth",
     "layout_show_breadcrumbs": true,
-    "layout_pagination_type": "infinite_scroll",
+    "layout_pagination_type": "centered_classic",
     "layout_enable_rtl": false,
     "layout_images_lazyload": true,
     "layout_settings_file": "default",
@@ -74,15 +74,16 @@
     "font_alternative": "basic_commercial_n4",
     "font_alternative_type": "none",
     "collection_show_sidebar": "desktop_and_mobile",
-    "collection_sidebar_position": "left",
+    "collection_sidebar_position": "dropdown",
     "collection_enable_sticky": true,
     "collection_tag_filters_logic": "and",
     "collection_only_available": false,
     "collection_enable_fullwidth_head_section": false,
-    "collection_enable_product_carousel_section": true,
+    "collection_enable_product_carousel_section": false,
     "collection_builder_mode": "",
     "product_format_pjpg": true,
     "product_show_review_loading": false,
+    "product_show_compare_at_price": false,
     "product_cursor": "",
     "product_show_custom_options": true,
     "product_enable_variants_section": true,
@@ -91,35 +92,35 @@
     "product_auto_selected_options": "",
     "product_variant_change_on_hover": false,
     "product_options_listing_visibility": "all",
-    "product_options_type_circle_color": "Color",
-    "product_options_type_circle_image": "Select color",
-    "product_options_type_square_color": "Colour",
-    "product_options_type_square_image": "Material 2",
-    "product_options_type_select": "Select",
-    "product_options_type_large_text": "Size",
-    "product_collection_image_height_percent": 128,
-    "product_collection_image_size": "contain",
+    "product_options_type_circle_color": "",
+    "product_options_type_circle_image": "",
+    "product_options_type_square_color": "",
+    "product_options_type_square_image": "",
+    "product_options_type_select": "",
+    "product_options_type_large_text": "",
+    "product_collection_image_height_percent": 133,
+    "product_collection_image_size": "cover",
     "product_collection_image_border_radius": 0,
     "product_replace_images_hover": true,
     "product_collection_show_label_in_stock": false,
     "product_collection_show_label_pre_order": true,
-    "product_collection_show_label_out_stock": true,
-    "product_collection_show_label_sale": true,
-    "product_collection_show_label_new": true,
-    "product_collection_show_label_hot": true,
+    "product_collection_show_label_out_stock": false,
+    "product_collection_show_label_sale": false,
+    "product_collection_show_label_new": false,
+    "product_collection_show_label_hot": false,
     "product_collection_centered_info": false,
     "product_collection_more_info_type": "vendor",
     "product_collection_show_title": true,
     "product_collection_show_price": true,
-    "product_collection_show_button_quick_view": true,
+    "product_collection_show_button_quick_view": false,
     "product_collection_show_countdown": true,
     "product_collection_show_images_navigation": true,
     "product_collection_show_options": true,
     "product_collection_show_quantity": false,
-    "product_collection_show_button_add_to_cart": true,
-    "product_collection_show_button_add_to_wishlist": true,
-    "product_collection_show_button_add_to_compare": true,
-    "product_collection_show_reviews": true,
+    "product_collection_show_button_add_to_cart": false,
+    "product_collection_show_button_add_to_wishlist": false,
+    "product_collection_show_button_add_to_compare": false,
+    "product_collection_show_reviews": false,
     "product_collection_hide_reviews_counter": true,
     "product_collection_hide_reviews_mobile_counter": true,
     "product_collection_hide_empty_reviews": true,
@@ -137,53 +138,53 @@
     "product_info_video_autoplay": true,
     "product_info_enable_zoom": true,
     "product_info_zoom_scale_coef": 2,
-    "product_info_gallery_height_percent": 128,
+    "product_info_gallery_height_percent": 133,
     "product_info_gallery_grouped": "disable",
-    "product_info_show_label_in_stock": true,
+    "product_info_show_label_in_stock": false,
     "product_info_show_label_pre_order": true,
-    "product_info_show_label_out_stock": true,
-    "product_info_show_label_sale": true,
-    "product_info_show_label_new": true,
-    "product_info_show_label_hot": true,
+    "product_info_show_label_out_stock": false,
+    "product_info_show_label_sale": false,
+    "product_info_show_label_new": false,
+    "product_info_show_label_hot": false,
     "product_info_show_collections": false,
     "product_info_show_title": true,
     "product_info_description_place": "tabs",
     "product_info_show_price": true,
-    "product_info_show_sale_details": true,
+    "product_info_show_sale_details": false,
     "product_info_show_taxes": false,
-    "product_info_show_sku": true,
+    "product_info_show_sku": false,
     "product_info_show_barcode": false,
     "product_info_show_availability": false,
     "product_info_show_type": false,
     "product_info_show_vendor": true,
-    "product_info_show_reviews": true,
+    "product_info_show_reviews": false,
     "product_info_hide_reviews_counter": false,
     "product_info_hide_empty_reviews": true,
     "product_info_show_countdown": true,
     "product_info_show_options": true,
     "product_info_show_notes": true,
     "product_info_show_size_guide": true,
-    "product_info_size_guide_page_content": "",
+    "product_info_size_guide_page_content": "size-guide",
     "product_info_show_delivery_return": true,
-    "product_info_delivery_return_page_content": "",
-    "product_info_show_quantity": true,
-    "product_info_button_layout": "3",
+    "product_info_delivery_return_page_content": "delivery-return",
+    "product_info_show_quantity": false,
+    "product_info_button_layout": "1",
     "product_info_show_button_add_to_cart": true,
     "product_button_addtocart_size": "default",
-    "product_info_show_button_add_to_wishlist": true,
-    "product_info_show_button_add_to_compare": true,
-    "product_info_show_payments": true,
+    "product_info_show_button_add_to_wishlist": false,
+    "product_info_show_button_add_to_compare": false,
+    "product_info_show_payments": false,
     "product_info_show_social_share_buttons": true,
     "product_info_social_share_buttons_type": "1",
     "product_info_page_enable_sticky_gallery": true,
-    "product_info_page_show_button_dynamic_checkout": true,
+    "product_info_page_show_button_dynamic_checkout": false,
     "product_info_page_show_dynamic_checkout_confirmation": true,
     "product_info_page_styled_dynamic_checkout": true,
     "product_info_page_show_related_products": true,
     "product_info_page_show_usage_info_sidebar": true,
     "product_info_page_sidebar": "off",
     "product_info_page_enable_sticky_sidebar": true,
-    "product_footbar_enable": true,
+    "product_footbar_enable": false,
     "product_footbar_show_title": true,
     "product_footbar_show_price": true,
     "product_footbar_show_reviews": true,
@@ -220,7 +221,7 @@
     "cart_icon": "",
     "cart_show_vendor": false,
     "cart_show_notes": true,
-    "cart_show_free_shipping": false,
+    "cart_show_free_shipping": true,
     "cart_free_shipping_value": "20000",
     "shipping_calculator": "Enabled",
     "shipping_calculator_default_country": "United States",
@@ -233,14 +234,14 @@
     "compare_show_barcode": true,
     "compare_show_options": true,
     "compare_description_max_size": 100,
-    "social_share_image": "shopify:\/\/shop_images\/Frame_7.1_2.png",
-    "social_facebook": "https:\/\/www.facebook.com\/mpthemes\/",
-    "social_twitter": "https:\/\/twitter.com\/MariPet9",
+    "social_share_image": "",
+    "social_facebook": "https:\/\/www.facebook.com\/blancsom",
+    "social_twitter": "",
     "social_instagram": "https:\/\/www.instagram.com\/mpthemes2019\/",
-    "social_pinterest": "https:\/\/dribbble.com\/mpithemes",
-    "social_youtube": "https:\/\/www.youtube.com\/channel\/UCVJfUsqMVr-Wcjel4M6-qrg",
-    "social_behance": "https:\/\/behance.net\/mpthemes01c0",
-    "social_skype": "https:\/\/dribbble.com\/mpithemes",
+    "social_pinterest": "",
+    "social_youtube": "",
+    "social_behance": "",
+    "social_skype": "",
     "social_share_enable_facebook": true,
     "social_share_enable_twitter": true,
     "social_share_enable_pinterest": true,
@@ -282,11 +283,11 @@
     "article_sidebar_position": "right",
     "article_enable_sticky": true,
     "account_show_header_button": true,
-    "account_popup_enable": true,
+    "account_popup_enable": false,
     "account_popup_sign_up_info_page_content": "",
     "account_popup_show_subscription": true,
     "account_page_sing_up_page_content": "",
-    "services_show_header_button": true,
+    "services_show_header_button": false,
     "services_popup_enable": true,
     "services_popup_page_content": "",
     "javascript_loader_jquery_first": true,
@@ -296,13 +297,28 @@
     "input_border_radius": 0,
     "promobox_image_border_radius": 0,
     "promobox_format_pjpg": true,
-    "notification_cookies_enable": true,
+    "promocode_display_enable": false,
+    "promocode_display_collection": "promotion",
+    "promocode_display_text": "You get 20% off with \"THANKSGIVING20\" code.",
+    "sourcing_cbt_supplier": "6033bdfb2211d261162ebc24",
+    "sourcing_cbt_sourcing_type": "16",
+    "sourcing_cbt_storage": "1",
+    "sourcing_cbt_title": "SHIPPING FROM ITALY",
+    "sourcing_cbt_text": "This product will be directly shipped from Italy. It may take an average 7 days or more to receive the item. The international shipping cost will be charged.",
+    "sourcing_brand_supplier": "5fec8e8ba1f25674fb0aeae4",
+    "sourcing_brand_sourcing_type": "20",
+    "sourcing_brand_storage": "1",
+    "use_sourcing_check_add1": true,
+    "sourcing_brand_supplier_add1": "6033bdb06b29294cf50bbcd4",
+    "sourcing_brand_sourcing_type_add1": "20",
+    "sourcing_brand_storage_add1": "4",
+    "notification_cookies_enable": false,
     "notification_cookies_button_information_link": "",
     "notification_cookies_delay": 0,
     "notification_cookies_show_once": true,
-    "notification_cookies_cookies_life": "1",
-    "notification_products_enable": true,
-    "notification_products_collection": "featured",
+    "notification_cookies_cookies_life": "31",
+    "notification_products_enable": false,
+    "notification_products_collection": "",
     "notification_products_range_min": 2,
     "notification_products_range_max": 20,
     "notification_products_delay": 8,
@@ -319,14 +335,14 @@
     "header_animation_sticky_opacity": 0.9,
     "header_tape_animation_duration": 0,
     "product_hover_animation_type": "fade",
-    "buttons_animation_icon_enable": true,
+    "buttons_animation_icon_enable": false,
     "dev_enable_custom_css": false,
     "dev_enable_custom_js": false,
     "dev_enable_content_for_header": true,
     "checkout_header_image": "",
-    "checkout_logo_image": "",
+    "checkout_logo_image": "shopify:\/\/shop_images\/blancsom-logo_2ddb7735-b27f-4001-aed9-dd0fe8ee7438.png",
     "checkout_logo_position": "left",
-    "checkout_logo_size": "medium",
+    "checkout_logo_size": "small",
     "checkout_body_background_image": "",
     "checkout_body_background_color": "#fff",
     "checkout_input_background_color_mode": "white",
@@ -340,7 +356,7 @@
     "product_info_show_arrows": true,
     "product_info_quick_show_full_details": true,
     "product_info_payments_type": "dark",
-    "wishlist_enable": true,
+    "wishlist_enable": false,
     "compare_enable": true,
     "payment_footer_sequence": "1,2,3,4,5,6,7,8,9",
     "payment_product_sequence": "10,11,12,1,2,3,4,5,6,7,8,9",
@@ -550,7 +566,7 @@
       "header": {
         "type": "header",
         "blocks": {
-          "1525791872612": {
+          "3c3168d6-b52b-4dfb-b9c5-7aec6de11e6d": {
             "type": "tape",
             "settings": {
               "delay": 0,
