--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -850,7 +850,7 @@
           "footer-0": {
             "type": "copyright",
             "settings": {
-              "page_content": "include-footer-copyright-3"
+              "page_content": ""
             }
           },
           "1586284627913": {
