--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -297,8 +297,8 @@
     "input_border_radius": 0,
     "promobox_image_border_radius": 0,
     "promobox_format_pjpg": true,
-    "promocode_display_enable": false,
-    "promocode_display_collection": "promotion",
+    "promocode_display_enable": true,
+    "promocode_display_collection": "thanksgiving20",
     "promocode_display_text": "You get 20% off with \"THANKSGIVING20\" code.",
     "sourcing_cbt_supplier": "6033bdfb2211d261162ebc24",
     "sourcing_cbt_sourcing_type": "16",
