Linked Designer name to Vendor

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -297,11 +297,11 @@
     "input_border_radius": 0,
     "promobox_image_border_radius": 0,
     "promobox_format_pjpg": true,
-    "promocode_display_enable": true,
-    "promocode_display_collection": "thanksgiving20",
+    "promocode_display_enable": false,
+    "promocode_display_collection": "promotion",
     "promocode_display_text": "You get 20% off with \"THANKSGIVING20\" code.",
-    "sourcing_cbt_supplier": "6033bdfb2211d261162ebc24",
-    "sourcing_cbt_sourcing_type": "16",
+    "sourcing_cbt_supplier": "5fbd88124bdc6265cd5527c2",
+    "sourcing_cbt_sourcing_type": "20",
     "sourcing_cbt_storage": "1",
     "sourcing_cbt_title": "SHIPPING FROM ITALY",
     "sourcing_cbt_text": "This product will be directly shipped from Italy. It may take an average 7 days or more to receive the item. The international shipping cost will be charged.",
