--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -70,7 +70,7 @@
     "font_alternative": "basic_commercial_n4",
     "font_alternative_type": "none",
     "collection_show_sidebar": "desktop_and_mobile",
-    "collection_sidebar_position": "left",
+    "collection_sidebar_position": "dropdown",
     "collection_enable_sticky": true,
     "collection_tag_filters_logic": "or",
     "collection_only_available": false,
@@ -87,14 +87,14 @@
     "product_auto_selected_options": "",
     "product_options_listing_visibility": "all",
     "product_variant_change_on_hover": false,
-    "product_options_type_circle_color": "Color",
-    "product_options_type_circle_image": "Select color",
-    "product_options_type_square_color": "Colour",
-    "product_options_type_square_image": "Material 2",
-    "product_options_type_select": "Select",
-    "product_options_type_large_text": "Size",
-    "product_collection_image_height_percent": 128,
-    "product_collection_image_size": "contain",
+    "product_options_type_circle_color": "",
+    "product_options_type_circle_image": "",
+    "product_options_type_square_color": "",
+    "product_options_type_square_image": "",
+    "product_options_type_select": "",
+    "product_options_type_large_text": "",
+    "product_collection_image_height_percent": 133,
+    "product_collection_image_size": "cover",
     "product_collection_image_border_radius": 0,
     "product_replace_images_hover": true,
     "product_collection_show_label_in_stock": false,
@@ -107,15 +107,15 @@
     "product_collection_more_info_type": "vendor",
     "product_collection_show_title": true,
     "product_collection_show_price": true,
-    "product_collection_show_button_quick_view": true,
+    "product_collection_show_button_quick_view": false,
     "product_collection_show_countdown": true,
     "product_collection_show_images_navigation": true,
     "product_collection_show_options": true,
     "product_collection_show_quantity": false,
-    "product_collection_show_button_add_to_cart": true,
-    "product_collection_show_button_add_to_wishlist": true,
-    "product_collection_show_button_add_to_compare": true,
-    "product_collection_show_reviews": true,
+    "product_collection_show_button_add_to_cart": false,
+    "product_collection_show_button_add_to_wishlist": false,
+    "product_collection_show_button_add_to_compare": false,
+    "product_collection_show_reviews": false,
     "product_collection_hide_reviews_counter": true,
     "product_collection_hide_reviews_mobile_counter": true,
     "product_collection_hide_empty_reviews": true,
@@ -133,9 +133,9 @@
     "product_info_video_autoplay": true,
     "product_info_enable_zoom": true,
     "product_info_zoom_scale_coef": 2,
-    "product_info_gallery_height_percent": 128,
+    "product_info_gallery_height_percent": 133,
     "product_info_gallery_grouped": "disable",
-    "product_info_show_label_in_stock": true,
+    "product_info_show_label_in_stock": false,
     "product_info_show_label_pre_order": true,
     "product_info_show_label_out_stock": true,
     "product_info_show_label_sale": true,
@@ -147,12 +147,12 @@
     "product_info_show_price": true,
     "product_info_show_sale_details": true,
     "product_info_show_taxes": false,
-    "product_info_show_sku": true,
+    "product_info_show_sku": false,
     "product_info_show_barcode": false,
     "product_info_show_availability": false,
     "product_info_show_type": false,
     "product_info_show_vendor": true,
-    "product_info_show_reviews": true,
+    "product_info_show_reviews": false,
     "product_info_hide_reviews_counter": false,
     "product_info_hide_empty_reviews": true,
     "product_info_show_countdown": true,
@@ -162,24 +162,24 @@
     "product_info_size_guide_page_content": "",
     "product_info_show_delivery_return": true,
     "product_info_delivery_return_page_content": "",
-    "product_info_show_quantity": true,
-    "product_info_button_layout": "3",
+    "product_info_show_quantity": false,
+    "product_info_button_layout": "1",
     "product_info_show_button_add_to_cart": true,
     "product_button_addtocart_size": "default",
-    "product_info_show_button_add_to_wishlist": true,
+    "product_info_show_button_add_to_wishlist": false,
     "product_info_show_button_add_to_compare": true,
-    "product_info_show_payments": true,
+    "product_info_show_payments": false,
     "product_info_show_social_share_buttons": true,
     "product_info_social_share_buttons_type": "1",
     "product_info_page_enable_sticky_gallery": true,
-    "product_info_page_show_button_dynamic_checkout": true,
+    "product_info_page_show_button_dynamic_checkout": false,
     "product_info_page_show_dynamic_checkout_confirmation": true,
     "product_info_page_styled_dynamic_checkout": true,
     "product_info_page_show_related_products": true,
     "product_info_page_show_usage_info_sidebar": true,
     "product_info_page_sidebar": "off",
     "product_info_page_enable_sticky_sidebar": true,
-    "product_footbar_enable": true,
+    "product_footbar_enable": false,
     "product_footbar_show_title": true,
     "product_footbar_show_price": true,
     "product_footbar_show_reviews": true,
@@ -315,7 +315,7 @@
     "header_animation_sticky_opacity": 0.9,
     "header_tape_animation_duration": 0,
     "product_hover_animation_type": "fade",
-    "buttons_animation_icon_enable": true,
+    "buttons_animation_icon_enable": false,
     "dev_enable_custom_css": false,
     "dev_enable_custom_js": false,
     "checkout_header_image": "",
@@ -340,7 +340,7 @@
     "product_info_show_arrows": true,
     "product_info_quick_show_full_details": true,
     "product_info_payments_type": "dark",
-    "wishlist_enable": true,
+    "wishlist_enable": false,
     "compare_enable": true,
     "payment_footer_sequence": "1,2,3,4,5,6,7,8,9",
     "payment_product_sequence": "10,11,12,1,2,3,4,5,6,7,8,9",
@@ -1437,8 +1437,9 @@
           "enable_view_length_18": true,
           "enable_view_length_24": true,
           "enable_view_length_48": false,
-          "default_view_length": "12",
+          "default_view_length": "24",
           "view_grid_visibility": "desktop_n_mobile",
+          "show_view_grid": false,
           "show_view_grid_1": true,
           "show_view_grid_2": true,
           "show_view_grid_3": true,
@@ -1447,7 +1448,7 @@
           "show_view_grid_list": true,
           "view_grid_list_design": "2",
           "enable_grid_tooltip": true,
-          "default_view_grid_xl": "3",
+          "default_view_grid_xl": "4",
           "default_view_grid_lg": "3",
           "default_view_grid_md": "3",
           "default_view_grid_sm": "2",
