--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -278,7 +278,7 @@
     "article_sidebar_position": "right",
     "article_enable_sticky": true,
     "account_show_header_button": true,
-    "account_popup_enable": true,
+    "account_popup_enable": false,
     "account_popup_sign_up_info_page_content": "",
     "account_popup_show_subscription": true,
     "account_page_sing_up_page_content": "",
