--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -99,10 +99,10 @@
     "product_replace_images_hover": true,
     "product_collection_show_label_in_stock": false,
     "product_collection_show_label_pre_order": true,
-    "product_collection_show_label_out_stock": true,
-    "product_collection_show_label_sale": true,
-    "product_collection_show_label_new": true,
-    "product_collection_show_label_hot": true,
+    "product_collection_show_label_out_stock": false,
+    "product_collection_show_label_sale": false,
+    "product_collection_show_label_new": false,
+    "product_collection_show_label_hot": false,
     "product_collection_centered_info": false,
     "product_collection_more_info_type": "vendor",
     "product_collection_show_title": true,
@@ -137,10 +137,10 @@
     "product_info_gallery_grouped": "disable",
     "product_info_show_label_in_stock": false,
     "product_info_show_label_pre_order": true,
-    "product_info_show_label_out_stock": true,
-    "product_info_show_label_sale": true,
-    "product_info_show_label_new": true,
-    "product_info_show_label_hot": true,
+    "product_info_show_label_out_stock": false,
+    "product_info_show_label_sale": false,
+    "product_info_show_label_new": false,
+    "product_info_show_label_hot": false,
     "product_info_show_collections": false,
     "product_info_show_title": true,
     "product_info_description_place": "tabs",
