--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -297,7 +297,7 @@
     "notification_cookies_delay": 0,
     "notification_cookies_show_once": true,
     "notification_cookies_cookies_life": "1",
-    "notification_products_enable": true,
+    "notification_products_enable": false,
     "notification_products_collection": "featured",
     "notification_products_range_min": 2,
     "notification_products_range_max": 20,
@@ -1437,7 +1437,7 @@
           "enable_view_length_18": true,
           "enable_view_length_24": true,
           "enable_view_length_48": false,
-          "default_view_length": "24",
+          "default_view_length": "12",
           "view_grid_visibility": "desktop_n_mobile",
           "show_view_grid": false,
           "show_view_grid_1": true,
