--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -145,7 +145,7 @@
     "product_info_show_title": true,
     "product_info_description_place": "tabs",
     "product_info_show_price": true,
-    "product_info_show_sale_details": true,
+    "product_info_show_sale_details": false,
     "product_info_show_taxes": false,
     "product_info_show_sku": false,
     "product_info_show_barcode": false,
@@ -292,11 +292,14 @@
     "input_border_radius": 0,
     "promobox_image_border_radius": 0,
     "promobox_format_pjpg": true,
-    "notification_cookies_enable": true,
+    "promocode_display_enable": true,
+    "promocode_display_collection": "thanksgiving20",
+    "promocode_display_text": "You get 20% off of this item with \"THANKSGIVING20\" code.",
+    "notification_cookies_enable": false,
     "notification_cookies_button_information_link": "",
     "notification_cookies_delay": 0,
     "notification_cookies_show_once": true,
-    "notification_cookies_cookies_life": "1",
+    "notification_cookies_cookies_life": "31",
     "notification_products_enable": false,
     "notification_products_collection": "featured",
     "notification_products_range_min": 2,
