Build Customization UI for shipping notice

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -294,7 +294,12 @@
     "promobox_format_pjpg": true,
     "promocode_display_enable": true,
     "promocode_display_collection": "thanksgiving20",
-    "promocode_display_text": "You get 20% off of this item with \"THANKSGIVING20\" code.",
+    "promocode_display_text": "You get 20% off with \"THANKSGIVING20\" code.",
+    "sourcing_cbt_supplier": "mxnitaly",
+    "sourcing_cbt_sourcing_type": "39",
+    "sourcing_cbt_storage": "3",
+    "sourcing_cbt_title": "SHIPPING FROM ITALY",
+    "sourcing_cbt_text": "This product will be directly shipped from Italy. It may take an average 7 days or more to receive the item. The international shipping cost will be charged.",
     "notification_cookies_enable": false,
     "notification_cookies_button_information_link": "",
     "notification_cookies_delay": 0,
