Change Product Tab Block Name

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -159,9 +159,9 @@
     "product_info_show_options": true,
     "product_info_show_notes": true,
     "product_info_show_size_guide": true,
-    "product_info_size_guide_page_content": "",
+    "product_info_size_guide_page_content": "size-guide",
     "product_info_show_delivery_return": true,
-    "product_info_delivery_return_page_content": "",
+    "product_info_delivery_return_page_content": "delivery-return",
     "product_info_show_quantity": false,
     "product_info_button_layout": "1",
     "product_info_show_button_add_to_cart": true,
